--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOUGICRAFT - Survival Economy Server</title>
+    <title>MOUGICRAFT - Survival Server</title>
     <link rel="icon" type="image/png" href="mougicraftlogos.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,12 +21,12 @@
             <img src="mougicraftlogos.png" alt="MougiCraft Logo" class="hero-logo">
             
             <div class="mb-2">
-                <span class="text-xs font-pixel text-accent tracking-widest">⚔ SURVIVAL ECONOMY SERVER ⚔</span>
+                <span class="text-xs font-pixel text-accent tracking-widest">⚔ SURVIVAL SERVER ⚔</span>
             </div>
             <h1 class="hero-title">MOUGICRAFT</h1>
             <div class="hero-divider"></div>
             <p class="hero-subtitle">
-                Join our Minecraft Survival Economy server and start your adventure today!
+                Join our Minecraft Survival server and start your adventure today!
             </p>
 
             <!-- Server IP Cards -->
