--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOUGICRAFT - Survival Server</title>
-    <link rel="icon" type="image/png" href="mougicraftlogos.png">
+    <link rel="icon" type="image/png" href="mougicraftlogos.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         
         <div class="hero-content">
             <!-- Logo Image -->
-            <img src="mougicraftlogos.png" alt="MougiCraft Logo" class="hero-logo">
+            <img src="mougicraftlogos.webp" alt="MougiCraft Logo" class="hero-logo">
             
             <div class="mb-2">
                 <span class="text-xs font-pixel text-accent tracking-widest">⚔ SURVIVAL SERVER ⚔</span>
