--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- Social buttons -->
             <div class="social-buttons">
-                <a href="http://map.mougicraft.my.id" target="_blank" rel="noopener noreferrer" class="social-card map">
+                <a href="https://map.mougicraft.my.id" target="_blank" rel="noopener noreferrer" class="social-card map">
                     <svg class="w-5 h-5" style="color: hsl(200, 70%, 65%)" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/></svg>
                     <span style="color: hsl(200, 70%, 65%)">Map</span>
                 </a>
@@ -153,6 +153,13 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Embedded iframe section -->
+    <section class="embed-section">
+        <div class="iframe-container">
+            <iframe src="https://map.mougicraft.my.id" title="Embedded Map"></iframe>
         </div>
     </section>
 
