--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
             <!-- Social buttons -->
             <div class="social-buttons">
     
+                <a href="https://www.tiktok.com/@mougiii_" target="_blank" rel="noopener noreferrer" class="social-card tiktok retro-button pixel-hover" onclick="playSound('beep')">
+                    <svg class="w-5 h-5" style="color: #25f4ee" fill="currentColor" viewBox="0 0 24 24"><path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.88 2.88 0 0 1 .88.13V9.4a5.77 5.77 0 0 0-1-.08A5.77 5.77 0 0 0 6.59 21a5.77 5.77 0 0 0 5.77-5.77V9.8a7.63 7.63 0 0 0 4.23 1.26V7.93a7.1 7.1 0 0 1-.59-.04z"/></svg>
+                    <span style="color: #25f4ee">Mougi</span>
+                </a>
+                <a href="https://www.tiktok.com/@imougi1" target="_blank" rel="noopener noreferrer" class="social-card tiktok-craft retro-button pixel-hover" onclick="playSound('beep')">
+                    <svg class="w-5 h-5" style="color: #25f4ee" fill="currentColor" viewBox="0 0 24 24"><path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.88 2.88 0 0 1 .88.13V9.4a5.77 5.77 0 0 0-1-.08A5.77 5.77 0 0 0 6.59 21a5.77 5.77 0 0 0 5.77-5.77V9.8a7.63 7.63 0 0 0 4.23 1.26V7.93a7.1 7.1 0 0 1-.59-.04z"/></svg>
+                    <span style="color: #25f4ee">MougiCraft</span>
+                </a>
+                <a href="https://map.mougicraft.my.id/" target="_blank" rel="noopener noreferrer" class="social-card web-map retro-button pixel-hover" onclick="playSound('beep')">
+                    <svg class="w-5 h-5" style="color: hsl(100 60% 45%)" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5.41L6.41 9 10 12.59 17.59 5 19 6.41 12 13z"/></svg>
+                    <span style="color: hsl(100 60% 45%)">Web Map</span>
+                </a>
+                <a href="https://voice.mougicraft.my.id/" target="_blank" rel="noopener noreferrer" class="social-card bedrock-voice retro-button pixel-hover" onclick="playSound('beep')">
+                    <svg class="w-5 h-5" style="color: hsl(270 60% 50%)" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M23 7v6h-2V7h2zM1 7v6h2V7H1zm15-2v8c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-2.21 1.79-4 4-4s4 1.79 4 4z"/></svg>
+                    <span style="color: hsl(270 60% 50%)">Voice</span>
+                </a>
+
                 <a href="https://discord.com/invite/AWJ6eTKskY" target="_blank" rel="noopener noreferrer" class="social-card discord retro-button pixel-hover" onclick="playSound('beep')">
                     <svg class="w-5 h-5" style="color: hsl(235, 70%, 65%)" fill="currentColor" viewBox="0 0 24 24"><path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189z"/></svg>
                     <span style="color: hsl(235, 70%, 65%)">Discord</span>
