--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <div class="hero-content">
             <!-- Logo Image with glitch effect -->
             <div class="logo-container">
-                <img src="mougicraftlogos.webp" alt="MougiCraft Logo" class="hero-logo glitch-text">
+                <img src="mougicraftlogos.webp" alt="MougiCraft Logo" class="hero-logo">
                 <div class="logo-glow"></div>
             </div>
             
             <div class="mb-2 retro-badge">
                 <span class="text-xs font-pixel text-accent tracking-widest pixel-bounce">⚔ SURVIVAL SERVER ⚔</span>
             </div>
-            <h1 class="hero-title glitch-text">MOUGICRAFT</h1>
+            <h1 class="hero-title">MOUGICRAFT</h1>
             <div class="hero-divider pixel-divider"></div>
-            <p class="hero-subtitle glitch-text-sm">
+            <p class="hero-subtitle">
                 Join our Minecraft Survival server and start your adventure today!
             </p>
 
@@ -128,21 +128,20 @@
             </div>
         </div>
 
-        <!-- Bottom grass-like transition -->
-        <div class="grass-transition"></div>
     </section>
-
-    <!-- Dirt Transition -->
-    <div class="dirt-transition"></div>
 
     <!-- Rank Section -->
     <section class="rank-section retro-section">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-12 section-title">
                 <span class="text-[10px] font-pixel text-muted-foreground tracking-widest pixel-bounce">💎 UPGRADE YOUR GAME 💎</span>
-                <h2 class="font-pixel text-lg md:text-2xl text-primary text-glow mt-3 mb-3 glitch-text-effect">
-                    RANK PRICES
-                </h2>
+                <div class="retro-title-container">
+                    <div class="retro-title-border"></div>
+                    <h2 class="retro-title rank-title font-pixel text-4xl md:text-5xl text-primary text-glow mt-3 mb-3">
+                        <span class="retro-decor">◆</span> RANK PRICES <span class="retro-decor">◆</span>
+                    </h2>
+                    <div class="retro-title-border"></div>
+                </div>
                 <div class="rank-divider"></div>
                 <p class="text-muted-foreground text-sm retro-subtitle">Choose your rank and unlock powerful features</p>
             </div>
@@ -152,35 +151,36 @@
         </div>
     </section>
 
-    <!-- Stone Transition -->
-    <div class="stone-transition"></div>
-
     <!-- Crate Section -->
     <section class="crate-section retro-section">
         <div class="max-w-4xl mx-auto">
             <div class="text-center mb-12 section-title">
                 <span class="text-[10px] font-pixel text-muted-foreground tracking-widest pixel-bounce">🎁 TRY YOUR LUCK 🎁</span>
-                <h2 class="font-pixel text-lg md:text-2xl text-accent text-glow-gold mt-3 mb-3 glitch-text-effect">
-                    GACHA CRATE KEYS
-                </h2>
+                <div class="retro-title-container crate-title-container">
+                    <div class="retro-title-border crate-title-border"></div>
+                    <h2 class="retro-title crate-title font-pixel text-4xl md:text-5xl text-accent text-glow-gold mt-3 mb-3">
+                        <span class="retro-decor-gold">★</span> CRATE KEYS <span class="retro-decor-gold">★</span>
+                    </h2>
+                    <div class="retro-title-border crate-title-border"></div>
+                </div>
                 <div class="crate-divider"></div>
                 <p class="text-muted-foreground text-sm retro-subtitle">Open crates for rare items and loot!</p>
             </div>
             <div class="crate-grid">
                 <div class="mc-card mc-card-hover rounded p-8 text-center transition-all hover:scale-105 pixel-card retro-button pixel-hover" onclick="playSound('success')">
-                    <h3 class="font-pixel text-xs text-mythic mb-5 tracking-wider glitch-text-sm">Mythic Crate</h3>
+                    <h3 class="font-pixel text-xs text-mythic mb-5 tracking-wider">Mythic Crate</h3>
                     <p class="text-3xl font-bold text-foreground">
                         IDR <span class="text-mythic">5.000</span>
                     </p>
                 </div>
                 <div class="mc-card mc-card-hover rounded p-8 text-center transition-all hover:scale-105 pixel-card retro-button pixel-hover" onclick="playSound('success')">
-                    <h3 class="font-pixel text-xs text-primary mb-5 tracking-wider glitch-text-sm">Rank Crate</h3>
+                    <h3 class="font-pixel text-xs text-primary mb-5 tracking-wider">Rank Crate</h3>
                     <p class="text-3xl font-bold text-foreground">
                         IDR <span class="text-primary">8.000</span>
                     </p>
                 </div>
                 <div class="mc-card mc-card-hover rounded p-8 text-center transition-all hover:scale-105 pixel-card retro-button pixel-hover" onclick="playSound('success')">
-                    <h3 class="font-pixel text-xs text-gold mb-5 tracking-wider glitch-text-sm">Golden Crate</h3>
+                    <h3 class="font-pixel text-xs text-gold mb-5 tracking-wider">Golden Crate</h3>
                     <p class="text-3xl font-bold text-foreground">
                         IDR <span class="text-gold">10.000</span>
                     </p>
@@ -199,9 +199,6 @@
                 Fullscreen Map
             </a>
         </div>    </section>
-
-    <!-- Dirt Transition -->
-    <div class="dirt-transition"></div>
 
     <!-- Footer -->
     <footer class="footer retro-footer">
